Handle null GpuMemoryBuffer for WebXR

We may get null GpuMemoryBuffers in some cases, so we should
handle them without crashing or hanging presentation.

BUG=791815

Change-Id: Ic219bb678a4b1b852a7b299ac0083a5b10ee7a97
Reviewed-on: https://chromium-review.googlesource.com/c/1372475
Reviewed-by: Kenneth Russell <kbr@chromium.org>
Reviewed-by: Klaus Weidner <klausw@chromium.org>
Commit-Queue: Bill Orr <billorr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#616432}
Former-commit-id: 5bda46d1781d56eaa90b099702714ae3681dd6cf